syntax = "proto3";
package relay.crypto.secp256k1;

option go_package = "github.com/stratosnet/tx-client/crypto/secp256k1";

// PubKey defines a type alias for an ecdsa.PublicKey that implements
// Tendermint's PubKey interface. It represents the 33-byte compressed public
// key format.
message PubKey {
  bytes key = 1;
}

// PrivKey defines a type alias for an ecdsa.PrivateKey that implements
// Tendermint's PrivateKey interface.
message PrivKey {
  bytes key = 1;
}